Practice2/c5-ec2instance.tf
resource "aws_instance" "myec2" {
    ami = data.aws_ami.amzlinux2.id
    #instance_type = var.instance_type
    #instance_type = var.instance_type_list[0]
    instance_type = var.instance_type_map["prod"]
    user_data = file("${path.module}/app1.install.sh")
    key_name = var.instance_keypair
    vpc_security_group_ids = [ aws_security_group.vpc_ssh.id , aws_security_group.vpc_web.id ]
# Use of meta argument count and count.index
count = 2
    tags = {
      name = "Ec2_demo_count-${count.index}"
    }
  
}
